--- a/src/shared/components/search-box.module.css
+++ b/src/shared/components/search-box.module.css
@@ -2,8 +2,6 @@
   display: flex;
   justify-content: center;
   padding: 16px var(--container-padding);
-  position: relative;
-  z-index: 1;
 }
 
 .input {
